--- a/manifest.json
+++ b/manifest.json
@@ -6,18 +6,47 @@
     "dependencies": [
         "denikson-BepInExPack_Valheim-5.4.1601",
         "ValheimPlus-ValheimPlus-9.9.1",
-        "Nextek-SpeedyPaths-1.0.5",
-        "neurodr0me-RRRNpcs-0.2.3",
-        "neurodr0me-RRRCore-2.10.0",
-        "MathiasDecrock-PlanBuild-0.8.4",
-        "MathiasDecrock-Snap_Points_Made_Easy-1.3.0",
-        "ValheimModding-Jotunn-2.3.12",
-        "ValheimModding-HookGenPatcher-0.0.3",
-        "CW_Jesse-BetterNetworking_Valheim-1.2.2",
-        "TJzilla-BepInEx_ConfigurationManager-16.1.2",
-        "ERROR-BetterDiscordPresence-1.3.1",
         "Advize-PlantEverything-1.8.4",
         "Nexus-FarmGrid-0.2.0",
-        "makail-ItemDrawers-0.4.2"
+        "ValheimModding-HookGenPatcher-0.0.3",
+        "ValheimModding-Jotunn-2.3.12",
+        "MathiasDecrock-PlanBuild-0.8.4",
+        "Nextek-SpeedyPaths-1.0.5",
+        "neurodr0me-RRRCore-2.10.0",
+        "neurodr0me-RRRNpcs-0.2.3",
+        "TJzilla-BepInEx_ConfigurationManager-16.1.2",
+        "CW_Jesse-BetterNetworking_Valheim-1.2.2",
+        "MathiasDecrock-Snap_Points_Made_Easy-1.3.0",
+        "makail-ItemDrawers-0.4.2",
+        "ERROR-BetterDiscordPresence-1.3.1",
+        "jrobsonchase-PositionalAudio-3.0.1",
+        "ASharpPen-Spawn_That-0.11.3",
+        "FixItFelix-RegenerativeNature-1.1.0",
+        "thedefside-BlackMetalBuildPieces-0.0.4",
+        "OdinPlus-OdinArchitect-0.1.3",
+        "OdinPlus-Clutter-0.1.0",
+        "RandyKnapp-ExtendedItemDataFramework-1.0.6",
+        "RandyKnapp-EpicLoot-0.8.7",
+        "Nexus-InstantMonsterLootDrop-0.2.11",
+        "bdew-QuickConnect-1.4.0",
+        "hbocao-EnhancedPotions-0.3.18",
+        "RandyKnapp-EquipmentAndQuickSlots-2.0.14",
+        "OdinPlus-CustomDverger-0.0.2",
+        "OdinPlus-Digitalroots_GoldBars-1.2.0",
+        "OdinPlus-Digitalroots_EpicLoot_Adventure_Bounties-2.1.2",
+        "Tekla-JsonDotNet-13.0.1",
+        "Tekla-ColorfulSigns-5.4.1604",
+        "Neobotics-RequipMe-0.1.0",
+        "OdinPlus-TripleBronzeJVL-1.1.0",
+        "Detalhes-RestrictedAreas-0.0.3",
+        "HackShardGaming-ValheimPermissions-1.1.1",
+        "ProcGen-World_of_Valheim_SSC-0.7.2",
+        "WiseHorror-Veinmine-1.2.5",
+        "wernermayer-ServerInventory-1.1.10",
+        "OdinPlus-Marketplace_and_Server_NPCs-1.4.1",
+        "aedenthorn_nexus-AutoFeed-0.6.2",
+        "neurodr0me-RRRMonsters-2.2.1",
+        "Fantu-SageRobes-1.0.0",
+        "Fantu-PopVillages-1.0.0"
     ]
 }
