--- a/manifest.json
+++ b/manifest.json
@@ -47,6 +47,17 @@
         "aedenthorn_nexus-AutoFeed-0.6.2",
         "neurodr0me-RRRMonsters-2.2.1",
         "Fantu-SageRobes-1.0.0",
-        "Fantu-PopVillages-1.0.0"
+        "Fantu-PopVillages-1.0.0",
+        "MaxiMods-MultiCraft-1.0.0",
+        "mtnewton-Gravekeeper-2.2.0",
+        "Skrip-SkToolbox-1.10.5",
+        "Azumatt-AzuAntiCheat-1.4.0",
+        "RagnarsRokare-RagnarsRokare_AutoPickupSelector-0.4.0",
+        "RagnarokHCRP-MoreGates-1.0.11",
+        "KGvalheim-MagicOverhaul-1.5.2",
+        "FixingDeer-NameYourShip-0.5.4",
+        "ASharpPen-Drop_That-2.1.0",
+        "MathiasDecrock-SeedTotem-4.1.0",
+        "Azumatt-Wayshrine-1.0.6"
     ]
 }
