--- a/BepInEx/config/aedenthorn.AutoFeed.cfg
+++ b/BepInEx/config/aedenthorn.AutoFeed.cfg
@@ -21,7 +21,7 @@ AnimalDisallowTypes =
 ## Require animals to move to container to feed.
 # Setting type: Boolean
 # Default value: true
-RequireMove = true
+RequireMove = false
 
 ## Don't allow feeding from containers that have items that the animal will not eat as well.
 # Setting type: Boolean
