--- a/BepInEx/config/com.wisehorror.Veinmine.cfg
+++ b/BepInEx/config/com.wisehorror.Veinmine.cfg
@@ -20,7 +20,7 @@ Durability = true
 ## Progressive mode scales the number of sections mined according to the player's Pickaxes level.
 # Setting type: Boolean
 # Default value: false
-Enable Progressive = false
+Enable Progressive = true
 
 ## Radius around your hit area to veinmine. This value is multiplied by the player's Pickaxes level.
 ## Keep in mind 1 is the same length as the 1x1 wood floor.
@@ -43,7 +43,7 @@ XP Multiplier = 0.2
 ## Spreads your hit damage throughout all rock sections mined, as opposed to hitting every section for the total amount of damage.
 # Setting type: Boolean
 # Default value: false
-Enable Spread Damage = false
+Enable Spread Damage = true
 
 ## Level: Scales damage done to each section based on your Pickaxes level.
 ## Distance: Calculates damage done to each section based on your distance from it, the farther away, the less damage you do.
@@ -57,5 +57,5 @@ Spread Damage Type = distance
 ## Remove mining visual effects to try to *possibly* reduce fps lag 
 # Setting type: Boolean
 # Default value: false
-Remove Effects = false
+Remove Effects = true
 
