--- a/BepInEx/config/randyknapp.mods.equipmentandquickslots.cfg
+++ b/BepInEx/config/randyknapp.mods.equipmentandquickslots.cfg
@@ -6,17 +6,17 @@
 ## Hotkey for Quick Slot 1.
 # Setting type: String
 # Default value: z
-Quick slot hotkey 1 = z
+Quick slot hotkey 1 = [
 
 ## Hotkey for Quick Slot 2.
 # Setting type: String
 # Default value: v
-Quick slot hotkey 2 = v
+Quick slot hotkey 2 = ]
 
 ## Hotkey for Quick Slot 3.
 # Setting type: String
 # Default value: b
-Quick slot hotkey 3 = b
+Quick slot hotkey 3 = \
 
 ## Hotkey Label for Quick Slot 1. Leave blank to use the hotkey itself.
 # Setting type: String
@@ -51,7 +51,7 @@ Quick Slots Anchor = LowerLeft
 ## The position offset from the Quick Slots Anchor at which to place the Quick Slots.
 # Setting type: Vector2
 # Default value: {"x":216.0,"y":150.0}
-Quick Slots Position = {"x":216.0,"y":150.0}
+Quick Slots Position = {"x":0.0,"y":300.0}
 
 [Toggles]
 
