--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
         "ERROR-BetterDiscordPresence-1.3.1",
         "jrobsonchase-PositionalAudio-3.0.1",
         "ASharpPen-Spawn_That-0.11.3",
-        "FixItFelix-RegenerativeNature-1.1.0",
+        "FixItFelix-RegenerativeNature-1.2.0",
         "thedefside-BlackMetalBuildPieces-0.0.4",
         "OdinPlus-OdinArchitect-0.1.3",
         "OdinPlus-Clutter-0.1.0",
@@ -39,18 +39,14 @@
         "Neobotics-RequipMe-0.1.0",
         "OdinPlus-TripleBronzeJVL-1.1.0",
         "Detalhes-RestrictedAreas-0.0.3",
-        "HackShardGaming-ValheimPermissions-1.1.1",
         "ProcGen-World_of_Valheim_SSC-0.7.2",
         "WiseHorror-Veinmine-1.2.5",
-        "wernermayer-ServerInventory-1.1.10",
-        "OdinPlus-Marketplace_and_Server_NPCs-1.4.1",
         "aedenthorn_nexus-AutoFeed-0.6.2",
         "neurodr0me-RRRMonsters-2.2.1",
         "Fantu-SageRobes-1.0.0",
         "Fantu-PopVillages-1.0.0",
         "MaxiMods-MultiCraft-1.0.0",
         "mtnewton-Gravekeeper-2.2.0",
-        "Skrip-SkToolbox-1.10.5",
         "Azumatt-AzuAntiCheat-1.4.0",
         "RagnarsRokare-RagnarsRokare_AutoPickupSelector-0.4.0",
         "RagnarokHCRP-MoreGates-1.0.11",
@@ -58,6 +54,10 @@
         "FixingDeer-NameYourShip-0.5.4",
         "ASharpPen-Drop_That-2.1.0",
         "MathiasDecrock-SeedTotem-4.1.0",
-        "Azumatt-Wayshrine-1.0.6"
+        "Azumatt-Wayshrine-1.0.6",
+        "OdinPlus-BuildIt-1.3.1",
+        "KGvalheim-Marketplace_And_Server_NPCs_Revamped-4.3.0",
+        "Tekla-DungeonReset-5.4.1605",
+        "OdinPlus-AzuAdminTool-1.1.0"
     ]
 }
