More updating/changing
....maybe now ready? lol

--- a/BepInEx/config/aedenthorn.InstantMonsterDrop.cfg
+++ b/BepInEx/config/aedenthorn.InstantMonsterDrop.cfg
@@ -1,4 +1,4 @@
-## Settings file was created by plugin Instant Monster Drop v0.2.1
+## Settings file was created by plugin Instant Monster Drop v0.4.0
 ## Plugin GUID: aedenthorn.InstantMonsterDrop
 
 [General]
@@ -8,10 +8,20 @@
 # Default value: true
 Enabled = true
 
+## Enable debug
+# Setting type: Boolean
+# Default value: false
+IsDebug = false
+
 ## Delay before dropping loot
 # Setting type: Single
 # Default value: 0.01
 DropDelay = 0.01
+
+## Delay before destroying ragdoll
+# Setting type: Single
+# Default value: 0.05
+DestroyDelay = 0.05
 
 ## Mod ID on the Nexus for update checks
 # Setting type: Int32
