--- a/BepInEx/config/marcopogo.PlanBuild.cfg
+++ b/BepInEx/config/marcopogo.PlanBuild.cfg
@@ -6,7 +6,7 @@
 ## Allow sharing of blueprints on this server
 # Setting type: Boolean
 # Default value: false
-Allow serverside blueprints = false
+Allow serverside blueprints = true
 
 ## Allow clients to use the Hotkey to access server blueprints
 # Setting type: Boolean
