--- a/BepInEx/config/marcopogo.SeedTotem.cfg
+++ b/BepInEx/config/marcopogo.SeedTotem.cfg
@@ -119,7 +119,7 @@ Check for cultivated ground = true
 ## Should the Seed totem also check for the correct biome?
 # Setting type: Boolean
 # Default value: true
-Check for correct biome = true
+Check for correct biome = false
 
 ## Load custom piece requirements from seed-totem-custom-requirements.json?
 # Setting type: Boolean
