--- a/BepInEx/config/valheim_plus.cfg
+++ b/BepInEx/config/valheim_plus.cfg
@@ -388,7 +388,7 @@ rollBackwards = F10
 enabled = true
 
 ; Enables you to teleport with ores and other usually teleport restricted objects.
-noTeleportPrevention = true
+noTeleportPrevention = false
 
 ; Increase or reduce item weight by a modifier in percent.
 ; The value -50 will reduce item weight of every object by 50%, 50 will increase the weight of every item by 50%.
@@ -418,7 +418,7 @@ experienceGainedNotifications = true
 removeDamageFlash = false
 
 ; If bow is in hotbar, display current ammo & total ammo under hotbar icon - never (0), when equipped (1), or always (2).
-displayBowAmmoCounts = 2
+displayBowAmmoCounts = 0
 
 [Gathering]
 
@@ -729,7 +729,7 @@ hardWood = 0
 [Ward]
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#Ward
-enabled = true
+enabled = false
 
 ; The range of wards by meters.
 wardRange = 50
@@ -1013,7 +1013,7 @@ stunRecoveryTime = 10
 [GameClock]
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#GameClock
-enabled = true
+enabled = false
 
 ; Change time formatting from 24hr to AM-PM.
 useAMPM = true
