--- a/BepInEx/config/net.mtnewton.gravekeeper.cfg
+++ b/BepInEx/config/net.mtnewton.gravekeeper.cfg
@@ -12,7 +12,7 @@ Enabled = true
 ## If no graves are to be created, create one with a stone in it.
 # Setting type: Boolean
 # Default value: false
-KeepGrave = false
+KeepGrave = true
 
 ## Items that would go to the grave are deleted
 ## Control what gets deleted with the below Delete options
