--- a/manifest.json
+++ b/manifest.json
@@ -1,61 +1,62 @@
 {
-  "name": "Froslunda_Modpack",
-  "version_number": "0.0.1",
-  "website_url": "https://resurgent.network",
-  "description": "This is the modpack for the Valheim server generously hosted and ran by Resurgent Network",
-  "dependencies": [
-    "denikson-BepInExPack_Valheim-5.4.1601",
-    "ValheimPlus-ValheimPlus-9.9.1",
-    "Advize-PlantEverything-1.8.4",
-    "Nexus-FarmGrid-0.2.0",
-    "ValheimModding-HookGenPatcher-0.0.3",
-    "ValheimModding-Jotunn-2.3.12",
-    "MathiasDecrock-PlanBuild-0.8.4",
-    "Nextek-SpeedyPaths-1.0.5",
-    "neurodr0me-RRRCore-2.10.0",
-    "neurodr0me-RRRNpcs-0.2.3",
-    "TJzilla-BepInEx_ConfigurationManager-16.1.2",
-    "CW_Jesse-BetterNetworking_Valheim-1.2.2",
-    "MathiasDecrock-Snap_Points_Made_Easy-1.3.0",
-    "makail-ItemDrawers-0.4.2",
-    "ERROR-BetterDiscordPresence-1.3.1",
-    "jrobsonchase-PositionalAudio-3.0.1",
-    "ASharpPen-Spawn_That-0.11.3",
-    "FixItFelix-RegenerativeNature-1.2.0",
-    "thedefside-BlackMetalBuildPieces-0.0.4",
-    "OdinPlus-OdinArchitect-0.1.3",
-    "OdinPlus-Clutter-0.1.0",
-    "RandyKnapp-ExtendedItemDataFramework-1.0.6",
-    "RandyKnapp-EpicLoot-0.8.7",
-    "bdew-QuickConnect-1.4.0",
-    "hbocao-EnhancedPotions-0.3.18",
-    "RandyKnapp-EquipmentAndQuickSlots-2.0.14",
-    "OdinPlus-CustomDverger-0.0.2",
-    "OdinPlus-Digitalroots_GoldBars-1.2.0",
-    "OdinPlus-Digitalroots_EpicLoot_Adventure_Bounties-2.1.2",
-    "Tekla-JsonDotNet-13.0.1",
-    "Tekla-ColorfulSigns-5.4.1604",
-    "Neobotics-RequipMe-0.1.0",
-    "OdinPlus-TripleBronzeJVL-1.1.0",
-    "Detalhes-RestrictedAreas-0.0.3",
-    "ProcGen-World_of_Valheim_SSC-0.7.2",
-    "WiseHorror-Veinmine-1.2.5",
-    "aedenthorn_nexus-AutoFeed-0.6.2",
-    "neurodr0me-RRRMonsters-2.2.1",
-    "Fantu-SageRobes-1.0.0",
-    "Fantu-PopVillages-1.0.0",
-    "mtnewton-Gravekeeper-2.2.0",
-    "Azumatt-AzuAntiCheat-1.4.0",
-    "RagnarokHCRP-MoreGates-1.0.11",
-    "KGvalheim-MagicOverhaul-1.5.2",
-    "FixingDeer-NameYourShip-0.5.4",
-    "ASharpPen-Drop_That-2.1.0",
-    "MathiasDecrock-SeedTotem-4.1.0",
-    "Azumatt-Wayshrine-1.0.6",
-    "OdinPlus-BuildIt-1.3.1",
-    "KGvalheim-Marketplace_And_Server_NPCs_Revamped-4.3.0",
-    "Tekla-DungeonReset-5.4.1605",
-    "OdinPlus-AzuAdminTool-1.1.0",
-    "Same-AutoPicker-1.1.3"
-  ]
+    "name": "Froslunda_Modpack",
+    "version_number": "0.0.1",
+    "website_url": "https://resurgent.network",
+    "description": "This is the modpack for the Valheim server generously hosted and ran by Resurgent Network",
+    "dependencies": [
+        "denikson-BepInExPack_Valheim-5.4.1601",
+        "ValheimPlus-ValheimPlus-9.9.1",
+        "Advize-PlantEverything-1.8.4",
+        "Nexus-FarmGrid-0.2.0",
+        "ValheimModding-HookGenPatcher-0.0.3",
+        "ValheimModding-Jotunn-2.3.12",
+        "MathiasDecrock-PlanBuild-0.8.4",
+        "Nextek-SpeedyPaths-1.0.5",
+        "neurodr0me-RRRCore-2.10.0",
+        "neurodr0me-RRRNpcs-0.2.3",
+        "TJzilla-BepInEx_ConfigurationManager-16.1.2",
+        "CW_Jesse-BetterNetworking_Valheim-1.2.2",
+        "MathiasDecrock-Snap_Points_Made_Easy-1.3.0",
+        "makail-ItemDrawers-0.4.2",
+        "ERROR-BetterDiscordPresence-1.3.1",
+        "jrobsonchase-PositionalAudio-3.0.1",
+        "ASharpPen-Spawn_That-0.11.3",
+        "FixItFelix-RegenerativeNature-1.2.0",
+        "thedefside-BlackMetalBuildPieces-0.0.4",
+        "OdinPlus-OdinArchitect-0.1.3",
+        "OdinPlus-Clutter-0.1.0",
+        "RandyKnapp-ExtendedItemDataFramework-1.0.6",
+        "RandyKnapp-EpicLoot-0.8.7",
+        "bdew-QuickConnect-1.4.0",
+        "hbocao-EnhancedPotions-0.3.18",
+        "RandyKnapp-EquipmentAndQuickSlots-2.0.14",
+        "OdinPlus-CustomDverger-0.0.2",
+        "OdinPlus-Digitalroots_GoldBars-1.2.0",
+        "OdinPlus-Digitalroots_EpicLoot_Adventure_Bounties-2.1.2",
+        "Tekla-JsonDotNet-13.0.1",
+        "Tekla-ColorfulSigns-5.4.1604",
+        "Neobotics-RequipMe-0.1.0",
+        "OdinPlus-TripleBronzeJVL-1.1.0",
+        "Detalhes-RestrictedAreas-0.0.3",
+        "ProcGen-World_of_Valheim_SSC-0.7.2",
+        "WiseHorror-Veinmine-1.2.5",
+        "aedenthorn_nexus-AutoFeed-0.6.2",
+        "neurodr0me-RRRMonsters-2.2.1",
+        "Fantu-SageRobes-1.0.0",
+        "Fantu-PopVillages-1.0.0",
+        "mtnewton-Gravekeeper-2.2.0",
+        "Azumatt-AzuAntiCheat-1.4.0",
+        "RagnarokHCRP-MoreGates-1.0.11",
+        "KGvalheim-MagicOverhaul-1.5.2",
+        "FixingDeer-NameYourShip-0.5.4",
+        "ASharpPen-Drop_That-2.1.0",
+        "MathiasDecrock-SeedTotem-4.1.0",
+        "Azumatt-Wayshrine-1.0.6",
+        "OdinPlus-BuildIt-1.3.1",
+        "KGvalheim-Marketplace_And_Server_NPCs_Revamped-4.3.0",
+        "Tekla-DungeonReset-5.4.1605",
+        "OdinPlus-AzuAdminTool-1.1.0",
+        "Same-AutoPicker-1.1.3",
+        "abearcodes-SimpleRecycling-0.0.13"
+    ]
 }
