--- a/BepInEx/config/Detalhes.RestrictedAreas.cfg
+++ b/BepInEx/config/Detalhes.RestrictedAreas.cfg
@@ -6,5 +6,4 @@
 ## Example: x=100;y=100;radius=300;permittedIds=76561198053366464,7656119833896646;permissions=noBuild,noTerrain,noInteract,noTreeDamage,NoWard
 # Setting type: String
 # Default value: x=100;y=100;radius=300;permittedIds=76561198053366464,7656119833896646;permissions=noBuild,noTerrain,noInteract,noTreeDamage | x=100;y=100;radius=300;permittedIds=76561198053366464,7656119833896646;permissions=noBuild,noTerrain,noInteract,noTreeDamage
-RestrictedAreas = 
-
+RestrictedAreas = x=0;y=0;radius=250;permittedIds=76561197967995387,76561197969400013;permissions=noBuild,noTerrain,noInteract,noTreeDamage,NoWard
