--- a/config/alree.forgotten_biomes.cfg
+++ b/config/alree.forgotten_biomes.cfg
@@ -1,4 +1,4 @@
-## Settings file was created by plugin Forgotten Biomes v0.0.12
+## Settings file was created by plugin Forgotten Biomes v0.0.14
 ## Plugin GUID: alree.forgotten_biomes
 
 [_General]
@@ -97,7 +97,7 @@ Plains Locations = true
 
 ## Add vegetation/rocks in Mistlands
 # Setting type: Boolean
-# Default value: false
+# Default value: true
 Mistlands = true
 
 ## Add locations in Mistlands
