--- a/config/Detalhes.RestrictedAreas.cfg
+++ b/config/Detalhes.RestrictedAreas.cfg
@@ -1,4 +1,4 @@
-## Settings file was created by plugin Detalhes.RestrictedAreas v1.0.0
+## Settings file was created by plugin Detalhes.RestrictedAreas v2.0.0
 ## Plugin GUID: Detalhes.RestrictedAreas
 
 [Server config]
@@ -6,4 +6,5 @@
 ## Example: x=100;y=100;radius=300;permittedIds=76561198053366464,7656119833896646;permissions=noBuild,noTerrain,noInteract,noTreeDamage,NoWard
 # Setting type: String
 # Default value: x=100;y=100;radius=300;permittedIds=76561198053366464,7656119833896646;permissions=noBuild,noTerrain,noInteract,noTreeDamage | x=100;y=100;radius=300;permittedIds=76561198053366464,7656119833896646;permissions=noBuild,noTerrain,noInteract,noTreeDamage
-RestrictedAreas = x=0;y=0;radius=250;permittedIds=76561197967995387,76561197969400013;permissions=noBuild,noTerrain,noInteract,noTreeDamage,NoWard
+RestrictedAreas = x=0;y=0;radius=1;permittedIds=76561197967995387,76561197969400013;permissions=noBuild,noTerrain,noTreeDamage,NoWard,NoPickaxe,NoTreeDamage
+
