--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Froslunda_Modpack",
-  "version_number": "0.0.18",
+  "version_number": "0.0.19",
   "website_url": "https://resurgent.network",
   "description": "This is the modpack for the Valheim server generously hosted and ran by Resurgent Network",
   "dependencies": [
@@ -67,6 +67,7 @@
     "virtuaCode-EquipWheel-1.3.6",
     "virtuaCode-EmoteWheel-1.3.1",
     "virtuaCode-MoreEquipWheels-1.3.6",
-    "virtuaCode-TrashItems-1.2.4"
+    "virtuaCode-TrashItems-1.2.4",
+    "MaxiMods-MultiCraft-1.0.0"
   ]
 }
