--- a/manifest.json
+++ b/manifest.json
@@ -4,69 +4,69 @@
   "website_url": "https://resurgent.network",
   "description": "This is the modpack for the Valheim server generously hosted and ran by Resurgent Network",
   "dependencies": [
-    "denikson-BepInExPack_Valheim-5.4.1601",
-    "MeatwareMonster-MoreDefenses-1.2.0",
-    "ValheimPlus-ValheimPlus-9.9.1",
-    "Advize-PlantEverything-1.8.4",
-    "Nexus-FarmGrid-0.2.0",
-    "ValheimModding-HookGenPatcher-0.0.3",
-    "ValheimModding-Jotunn-2.4.1",
-    "Nextek-SpeedyPaths-1.0.5",
-    "ERROR-BetterDiscordPresence-1.3.1",
-    "jrobsonchase-PositionalAudio-3.0.1",
-    "FixItFelix-RegenerativeNature-1.2.3",
-    "OdinPlus-OdinArchitect-0.1.3",
-    "RandyKnapp-EpicLoot-0.8.7",
-    "bdew-QuickConnect-1.4.0",
-    "OdinPlus-CustomDverger-0.0.2",
-    "OdinPlus-Digitalroots_GoldBars-1.2.0",
-    "Tekla-ColorfulSigns-5.4.1604",
-    "Neobotics-RequipMe-0.1.0",
-    "Detalhes-RestrictedAreas-0.0.4",
-    "WiseHorror-Veinmine-1.2.5",
-    "Fantu-Sages_Vault-1.1.2",
-    "Fantu-PopVillages-1.0.1",
-    "Azumatt-AzuAntiCheat-1.5.0",
     "ASharpPen-Drop_That-2.1.1",
-    "Azumatt-Wayshrine-1.0.6",
-    "Tekla-DungeonReset-5.4.1605",
-    "OdinPlus-AzuAdminTool-1.1.0",
-    "abearcodes-SimpleRecycling-0.0.13",
-    "Smoothbrain-ConfigWatcher-1.0.1",
-    "MathiasDecrock-PlanBuild-0.9.0",
-    "neurodr0me-RRRCore-2.10.0",
-    "neurodr0me-RRRNpcs-0.2.3",
-    "TJzilla-BepInEx_ConfigurationManager-16.1.2",
-    "MathiasDecrock-Snap_Points_Made_Easy-1.3.0",
-    "makail-ItemDrawers-0.4.2",
     "ASharpPen-Spawn_That-0.11.4",
-    "thedefside-BlackMetalBuildPieces-0.0.4",
+    "Advize-PlantEverything-1.8.4",
+    "AlreeNicolas-Forgotten_Biomes-0.0.14",
+    "Azumatt-AzuAntiCheat-1.5.0",
+    "Azumatt-BetterWards-1.6.4",
+    "Azumatt-Wayshrine-1.0.6",
+    "ComfyMods-Compress-1.3.0",
+    "Detalhes-RestrictedAreas-0.0.4",
+    "ERROR-BetterDiscordPresence-1.3.1",
+    "Fantu-PopVillages-1.0.1",
+    "Fantu-Sages_Vault-1.1.2",
+    "FixItFelix-RegenerativeNature-1.2.3",
+    "KGvalheim-MagicOverhaul-1.5.2",
+    "KGvalheim-Marketplace_And_Server_NPCs_Revamped-5.9.0",
+    "MathiasDecrock-PlanBuild-0.9.0",
+    "MathiasDecrock-SeedTotem-4.1.0",
+    "MathiasDecrock-Snap_Points_Made_Easy-1.3.0",
+    "MaxiMods-MultiCraft-1.0.0",
+    "MeatwareMonster-MoreDefenses-1.2.0",
+    "Neobotics-RequipMe-0.1.0",
+    "Nextek-SpeedyPaths-1.0.5",
+    "Nexus-FarmGrid-0.2.0",
+    "OdinPlus-AzuAdminTool-1.1.0",
+    "OdinPlus-BuildIt-1.3.1",
     "OdinPlus-Clutter-0.1.0",
-    "RandyKnapp-ExtendedItemDataFramework-1.0.6",
-    "hbocao-EnhancedPotions-0.3.18",
-    "RandyKnapp-EquipmentAndQuickSlots-2.0.14",
+    "OdinPlus-CustomDverger-0.0.2",
     "OdinPlus-Digitalroots_EpicLoot_Adventure_Bounties-2.1.2",
-    "Tekla-JsonDotNet-13.0.1",
+    "OdinPlus-Digitalroots_GoldBars-1.2.0",
+    "OdinPlus-OdinArchitect-0.1.3",
     "OdinPlus-TripleBronzeJVL-1.1.0",
     "ProcGen-World_of_Valheim_SSC-0.7.2",
-    "aedenthorn_nexus-AutoFeed-0.6.2",
-    "neurodr0me-RRRMonsters-2.2.1",
-    "mtnewton-Gravekeeper-2.2.0",
     "RagnarokHCRP-MoreGates-1.0.11",
-    "KGvalheim-MagicOverhaul-1.5.2",
-    "MathiasDecrock-SeedTotem-4.1.0",
-    "OdinPlus-BuildIt-1.3.1",
-    "KGvalheim-Marketplace_And_Server_NPCs_Revamped-5.9.0",
-    "Same-AutoPicker-1.1.3",
-    "Azumatt-BetterWards-1.6.4",
-    "AlreeNicolas-Forgotten_Biomes-0.0.14",
-    "RockerKitten-BoneAppetit-3.0.4",
+    "RandyKnapp-EpicLoot-0.8.7",
+    "RandyKnapp-EquipmentAndQuickSlots-2.0.14",
+    "RandyKnapp-ExtendedItemDataFramework-1.0.6",
     "RandyKnapp-MinimalStatusEffects-1.0.3",
-    "virtuaCode-EquipWheel-1.3.6",
+    "RockerKitten-BoneAppetit-3.0.4",
+    "Same-AutoPicker-1.1.3",
+    "Smoothbrain-ConfigWatcher-1.0.1",
+    "TJzilla-BepInEx_ConfigurationManager-16.1.2",
+    "Tekla-ColorfulSigns-5.4.1604",
+    "Tekla-DungeonReset-5.4.1605",
+    "Tekla-JsonDotNet-13.0.1",
+    "ValheimModding-HookGenPatcher-0.0.3",
+    "ValheimModding-Jotunn-2.4.1",
+    "ValheimPlus-ValheimPlus-9.9.1",
+    "WiseHorror-Veinmine-1.2.5",
+    "abearcodes-SimpleRecycling-0.0.13",
+    "aedenthorn_nexus-AutoFeed-0.6.2",
+    "bdew-QuickConnect-1.4.0",
+    "denikson-BepInExPack_Valheim-5.4.1601",
+    "hbocao-EnhancedPotions-0.3.18",
+    "jrobsonchase-PositionalAudio-3.0.1",
+    "makail-ItemDrawers-0.4.2",
+    "mtnewton-Gravekeeper-2.2.0",
+    "neurodr0me-RRRCore-2.10.0",
+    "neurodr0me-RRRMonsters-2.2.1",
+    "neurodr0me-RRRNpcs-0.2.3",
+    "thedefside-BlackMetalBuildPieces-0.0.4",
     "virtuaCode-EmoteWheel-1.3.1",
+    "virtuaCode-EquipWheel-1.3.6",
     "virtuaCode-MoreEquipWheels-1.3.6",
-    "virtuaCode-TrashItems-1.2.4",
-    "MaxiMods-MultiCraft-1.0.0",
-    "ComfyMods-Compress-1.3.0"
+    "virtuaCode-TrashItems-1.2.4"
   ]
 }
