--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Froslunda_Modpack",
-  "version_number": "0.0.27",
+  "version_number": "0.0.28",
   "website_url": "https://resurgent.network",
   "description": "This is the modpack for the Valheim server generously hosted and ran by Resurgent Network",
   "dependencies": [
@@ -10,7 +10,6 @@
     "AlreeNicolas-Forgotten_Biomes-0.0.14",
     "Azumatt-AzuAntiCheat-1.5.0",
     "Azumatt-BetterWards-1.6.4",
-    "Azumatt-Wayshrine-1.0.6",
     "ComfyMods-Compress-1.3.0",
     "Detalhes-RestrictedAreas-0.0.4",
     "ERROR-BetterDiscordPresence-1.3.1",
@@ -35,6 +34,7 @@
     "OdinPlus-Digitalroots_GoldBars-1.2.0",
     "OdinPlus-OdinArchitect-0.1.3",
     "OdinPlus-TripleBronzeJVL-1.1.0",
+    "ontrigger-ValheimPerformanceOptimizations-0.7.6",
     "ProcGen-World_of_Valheim_SSC-0.7.2",
     "RagnarokHCRP-MoreGates-1.0.11",
     "RandyKnapp-EpicLoot-0.8.7",
@@ -43,7 +43,9 @@
     "RandyKnapp-MinimalStatusEffects-1.0.3",
     "RockerKitten-BoneAppetit-3.0.4",
     "Same-AutoPicker-1.1.3",
+    "Smoothbrain-ComfortTweaks-2.7.6",
     "Smoothbrain-ConfigWatcher-1.0.1",
+    "Smoothbrain-SteadyRegeneration-1.0.0",
     "TJzilla-BepInEx_ConfigurationManager-16.1.2",
     "Tekla-ColorfulSigns-5.4.1604",
     "Tekla-DungeonReset-5.4.1605",
@@ -60,6 +62,7 @@
     "jrobsonchase-PositionalAudio-3.0.1",
     "makail-ItemDrawers-0.4.2",
     "mtnewton-Gravekeeper-2.2.0",
+    "neurodr0me-RRRBetterRaids-2.2.0",
     "neurodr0me-RRRCore-2.10.0",
     "neurodr0me-RRRMonsters-2.2.1",
     "neurodr0me-RRRNpcs-0.2.3",
