--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,40 @@
 {
   "name": "Froslunda_Modpack",
-  "version_number": "0.0.30",
+  "version_number": "0.0.31",
   "website_url": "https://resurgent.network",
-  "description": "This is the modpack for the Valheim server generously hosted and ran by Resurgent Network",
+  "description": "Mods and configuration used on the Fröslunda Valheim Server",
   "dependencies": [
+    "abearcodes-SimpleRecycling-0.0.13",
+    "Advize-PlantEverything-1.8.4",
+    "aedenthorn_nexus-AutoFeed-0.6.2",
+    "AlreeNicolas-Forgotten_Biomes-0.0.15",
     "ASharpPen-Drop_That-2.1.1",
     "ASharpPen-Spawn_That-0.11.6",
-    "Advize-PlantEverything-1.8.4",
-    "AlreeNicolas-Forgotten_Biomes-0.0.14",
     "Azumatt-AzuAntiCheat-1.5.0",
     "Azumatt-BetterWards-1.6.4",
+    "bdew-QuickConnect-1.4.0",
     "ComfyMods-Compress-1.3.0",
+    "denikson-BepInExPack_Valheim-5.4.1601",
     "Detalhes-RestrictedAreas-0.0.4",
     "ERROR-BetterDiscordPresence-1.3.1",
     "Fantu-PopVillages-1.0.1",
     "Fantu-Sages_Vault-1.1.2",
     "FixItFelix-RegenerativeNature-1.2.3",
+    "hbocao-EnhancedPotions-0.3.18",
+    "jrobsonchase-PositionalAudio-3.0.1",
     "KGvalheim-MagicOverhaul-1.5.2",
     "KGvalheim-Marketplace_And_Server_NPCs_Revamped-6.0.1",
+    "makail-ItemDrawers-0.4.2",
     "MathiasDecrock-PlanBuild-0.9.0",
     "MathiasDecrock-SeedTotem-4.1.0",
     "MathiasDecrock-Snap_Points_Made_Easy-1.3.0",
     "MaxiMods-MultiCraft-1.0.0",
     "MeatwareMonster-MoreDefenses-1.2.0",
+    "mtnewton-Gravekeeper-2.2.0",
+    "neurodr0me-RRRBetterRaids-2.2.0",
+    "neurodr0me-RRRCore-2.10.0",
+    "neurodr0me-RRRMonsters-2.2.1",
+    "neurodr0me-RRRNpcs-0.2.3",
     "Nextek-SpeedyPaths-1.0.5",
     "Nexus-FarmGrid-0.2.0",
     "OdinPlus-AzuAdminTool-1.1.0",
@@ -39,36 +51,22 @@
     "RandyKnapp-EpicLoot-0.8.7",
     "RandyKnapp-EquipmentAndQuickSlots-2.0.14",
     "RandyKnapp-ExtendedItemDataFramework-1.0.6",
+    "RandyKnapp-Jam-1.0.2",
     "RandyKnapp-MinimalStatusEffects-1.0.3",
     "RockerKitten-BoneAppetit-3.0.4",
     "Same-AutoPicker-1.1.3",
     "Smoothbrain-ComfortTweaks-2.7.6",
     "Smoothbrain-ConfigWatcher-1.0.1",
     "Smoothbrain-SteadyRegeneration-1.0.0",
-    "TJzilla-BepInEx_ConfigurationManager-16.1.2",
     "Tekla-ColorfulSigns-5.4.1604",
     "Tekla-DungeonReset-5.4.1605",
     "Tekla-JsonDotNet-13.0.1",
+    "thedefside-BlackMetalBuildPieces-0.0.4",
+    "TJzilla-BepInEx_ConfigurationManager-16.1.2",
     "ValheimModding-HookGenPatcher-0.0.3",
     "ValheimModding-Jotunn-2.4.1",
     "ValheimPlus-ValheimPlus-9.9.1",
-    "WiseHorror-Veinmine-1.2.5",
-    "abearcodes-SimpleRecycling-0.0.13",
-    "aedenthorn_nexus-AutoFeed-0.6.2",
-    "bdew-QuickConnect-1.4.0",
-    "denikson-BepInExPack_Valheim-5.4.1601",
-    "hbocao-EnhancedPotions-0.3.18",
-    "jrobsonchase-PositionalAudio-3.0.1",
-    "makail-ItemDrawers-0.4.2",
-    "mtnewton-Gravekeeper-2.2.0",
-    "neurodr0me-RRRBetterRaids-2.2.0",
-    "neurodr0me-RRRCore-2.10.0",
-    "neurodr0me-RRRMonsters-2.2.1",
-    "neurodr0me-RRRNpcs-0.2.3",
-    "thedefside-BlackMetalBuildPieces-0.0.4",
-    "virtuaCode-EmoteWheel-1.3.1",
-    "virtuaCode-EquipWheel-1.3.6",
-    "virtuaCode-MoreEquipWheels-1.3.6",
-    "virtuaCode-TrashItems-1.2.4"
+    "virtuaCode-TrashItems-1.2.4",
+    "WiseHorror-Veinmine-1.2.5"
   ]
 }
